@@ -82,6 +82,7 @@ All (GUI):
 - Add wxBitmap ctor from wxCursor.
 - Always disable wxWizard "Back" button on the starting page (pmgrace30).
 - Add wxUIActionSimulator::Select().
+- Add wxOwnerDrawnComboBox::Is{List,Text}Empty() methods.
 
 wxGTK:
 
